# iubat-portal-scraping

./: Cargo.toml
src/: main.rs
