[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
headless_chrome = {git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"]}
tokio = {version = "^1.38.0", features = ["full"]}
anyhow = { version = "1.0", default-features = false }
